--- a/.prettierrc.toml
+++ b/.prettierrc.toml
@@ -1,3 +1,6 @@
-trailingComma = "es5"
-tabWidth = 2
+bracketSameLine = false
+endOfLine = "lf"
+printWidth = 100
 semi = false
+tabWidth = 2
+trailingComma = "es5"
