--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 server.port = 8080
-spring.jpa.show-sql=true
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.data.rest.basePath=/api
+
+#spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+#spring.datasource.url=jdbc:postgresql://localhost:5432/ci-ventas
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
