--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.data.rest.basePath=/api
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 #spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
 #spring.datasource.url=jdbc:postgresql://localhost:5432/ci-ventas
